tests/lexer/valid/test_string.tok
1:1 STRING_LITERAL "\"hello\"" hello
1:9 STRING_LITERAL "\"a b\"" a b
1:14 END_OF_FILE ""
