tests/lexer/invalid/test_unterminated_string_newline.tok
1:1 STRING_LITERAL "\"a" a
2:1 IDENTIFIER "b"
2:2 END_OF_FILE ""
